<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="initial_value">1</string>
    <string name="conv_from">AUD</string>
    <string name="conv_to">AUD</string>
    <string name="equals">=</string>
    <string name="spinner_and">and</string>
    <string name="conv_default">1</string>
    <string name="bgnd_image">Background Image</string>

    <string-array name="currency_types">
        <item>AUD</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>USD</item>
    </string-array>

    <string name="convert_button">Convert</string>
</resources>
