<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.martin.currencyconverter.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bgnd_image_resize"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/conv_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/initial_value"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/conv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conv_from"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/conv_init"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/conv_from"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/currency_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conv_default"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
/>

    <TextView
        android:id="@+id/conv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conv_to"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/currency_view"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
/>

    <Spinner
        android:id="@+id/currency_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/and"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/and"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:text="@string/spinner_and"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/currency_dest"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Spinner
        android:id="@+id/currency_dest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/convert_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/convert_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/convert_button"
        android:layout_marginBottom="23dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
